<?php

namespace App\Models;

use Illuminate\Database\Eloquent\Model;

class Company extends Model
{
    const UPDATED_AT = null;

    protected $fillable = [
        'name',
    ];
}
